--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,15 +1,11 @@
-<div class="row marketing col-md-12 rowCountdown" style="text-align: center">
+<div class="row marketing col-md-6 rowCountdown" style="text-align: center;">
     <div>
-        <h2>Coming Soon</h2>
         <h3>The 11th annual Didsbury Beer Festival will take place on
             <br>
             <br>
             <span style="font-weight:bold;">25th, 26th &amp; 27th October 2018</span>
         </h3>
         <p>Check back soon for more info!</p>
-        <twitter-widget>
-            <a class="twitter-timeline" data-lang="en" data-height="250" data-theme="light" href="https://twitter.com/dbf_beer"></a>
-        </twitter-widget>
     </div>
     <div>
         <br>
@@ -28,6 +24,11 @@
     <p>
         For all general enquiries, please email <a href="mailto:info@didsburybeerfestival.org.uk">info@didsburybeerfestival.org.uk</a>
     </p>
+</div>
+<div class="row marketing col-md-6" style="padding: 25px; text-align: center;">
+    <twitter-widget>
+        <a class="twitter-timeline" data-lang="en" data-height="350" data-theme="light" href="https://twitter.com/dbf_beer"></a>
+    </twitter-widget>
     <h4>Press <a href="https://www.youtube.com/watch?v=BdoGr0ocBT4" class="youtubePopup"><span class="glyphicon glyphicon-play-circle"></span></a> to watch our video, or check out our social offerings</h4>
     <p style="font-size:30px">
         <a href="https://twitter.com/dbf_beer"><i id="jv-twitter_alt" class="jv-twitter_alt"></i></a>
@@ -35,6 +36,6 @@
         <a href="http://www.flickr.com/photos/65526946@N08/"><i id="jv-flickr" class="jv-flickr"></i></a>
         <a href="http://www.youtube.com/user/Didsburybeerfestival"><i id="jv-youtube" class="jv-youtube"></i></a>
         <a href="http://didsburybeer.blogspot.co.uk/"><i id="jv-blogger" class="jv-blogger"></i></a>
-        <a href="https://plus.google.com/111188242650217473870" rel="publisher"><i id="jv-google" class="jv-google"></i></a>
+        <a href="https://plus.google.com/111188242650217473870" rel="publisher"><i id="jv-google" class="jv-google"></i>+</a>
     </p>
 </div>
