--- a/app/views/music.html
+++ b/app/views/music.html
@@ -1,46 +1,30 @@
 <div class="row marketing col-md-12">
     <div style="text-align:center;">
-        <h1>Thursday</h1>
-    </div>
-    <div class="bandDiv">
-        <h3 class="musicHeader"><a href="https://thefrescofuture.bandcamp.com/">Fresco Future</a></h3>
-        <span class="smallPrint">20:00 - 20:45</span>
-        <p>Blending influences of Britpop, emo, and a love of 60s pop and surf.</p>
-        <img width="100%" src="images/fresco.jpg">
-    </div>
-    <div class="bandDiv">
-        <h3 class="musicHeader">Tom Hingley</h3>
-        <span class="smallPrint">21:00 - 22:00</span>
-        <p>Former lead singer of the Inspiral Carpets, Tom plays an eclectic mix of Folk, Soul, Gospel and Blues with plenty of heart, as well as acoustic renditions of Inspiral classics.</p>
-        <img width="100%" src="images/hingley.jpg">
-    </div>
-    <div class="bandDiv">
-        <h3 class="musicHeader"><a href="https://thefrescofuture.bandcamp.com/">Fresco Future</a></h3>
-        <span class="smallPrint">22:15 - 23:00</span>
-    </div>
-
-    <div style="text-align:center;">
         <h1>Friday</h1>
     </div>
     <div class="bandDiv">
-        <h3 class="musicHeader"><a href="https://www.facebook.com/Misfires/">Tokyo Misfires</a></h3>
-        <span class="smallPrint">19:00 - 20:00</span>
-        <p>Cheshire based 4-piece band playing upbeat music from the 80s, 90s and now.</p>
-        <img width="100%" src="images/misfires.jpg">
+        <h3 class="musicHeader">Silver Train</h3>
+        <span class="smallPrint">18:30 - 19:30</span>
+        <p>Silver Train is fast moving local 4 piece covers band consisting of : A blend of folk/blues/ country/rock infused with harmonies and slick acoustic tones.</p>
+    </div>
+    <div class="bandDiv">
+        <h3 class="musicHeader"><a href="https://www.facebook.com/HalfLifeCoverBand/">Half-Life</a></h3>
+        <span class="smallPrint">20:00 - 21:00</span>
+        <p>With members pulled from the four corners of Manchester….as long as the corners include Wilmslow and Biddulph (!).....Half-Life are a four strong Rock/Metal/Punk covers band guaranteed to get you singing and dancing (or trying to coordinate nodding
+            your head and tapping your foot while holding a pint!) along with well-known tracks from a wide range of artists from late 60s Classic Rock to a bucket-load of more modern Noughties floor fillers. Between us, we’ve played across the UK and
+            internationally, from Christenings (really!) to large festivals and are always ready to set up and rock any occasion large or small. With an ever expanding set list which currently includes tracks from artists such as Steppenwolf, Iron Maiden,
+            Green Day, Red Hot Chilli Peppers, The Cult, Guns ‘n’ Roses, Queen and Bon Jovi, to pick just a few, book us and you’re guaranteed to hear plenty of songs which you’ll just have to stop what you’re doing and sing along to!</p>
+        <img width="100%" src="images/bands/halflife2018.jpg">
     </div>
     <div class="bandDiv">
         <h3 class="musicHeader">Paddle Faster</h3>
-        <span class="smallPrint">20:15 - 21:15</span>
-        <p>An entertaining and potent blend of unique acoustic styles. Expect traditional, modern, Americana, Celtic, popular etc. Powerful banjo and guitar, alongside strong vocals and harmonies.. goes down great with beer!</p>
-        <img width="100%" src="images/paddle.jpg">
-    </div>
-    <div class="bandDiv">
-        <h3 class="musicHeader">Zero Days</h3>
         <span class="smallPrint">21:30 - 23:00</span>
-        <p>Zerodays is an electro jazz band combining spoken word, eclectic beats, jazz saxophone and soulful cosmic soundscapes.</p>
-        <img width="100%" src="images/zerodays.jpg">
+        <p>Having successfully encouraged you to get even more drunk on the various luscious festival beers of yesteryear, Paddle Faster are back with this super-reinforced, max-strength lineup to further entertain you, and again keep you good company whilst
+            the beer flows! Paul Higham, Mat Walklate, India Shan Merrett, and Jonny Hulme promise to smash you round the lug 'oles by way of powerful guitar, fiddle, banjo, harmonica, flute and vocals, playing an upbeat mix of Celtic trad., Bluegrass,
+            Blues, Americana, all topped with a healthy dash of the contemporary. These musical veterans have played together in a myriad of musical collaborations over the years, and with each originally emerging from distinctly different musical backgrounds,
+            they combine to create a seriously hard-hitting sound and potent blend of unique acoustic styles. Get yer pints in early for this one..</p>
+        <img width="100%" src="images/bands/paddleFaster.jpg">
     </div>
-
     <div style="text-align:center;">
         <h1>Saturday</h1>
     </div>
@@ -48,29 +32,33 @@
         <h3 class="musicHeader"><a href="https://www.facebook.com/SwinginAffair/">Swingin' Affair</a></h3>
         <span class="smallPrint">13:00 - 15:00</span>
         <p>Big Band/Easy listening.</p>
-        <img width="100%" src="images/sa.jpg">
+        <img width="100%" src="images/bands/sa.jpg">
     </div>
     <div class="bandDiv">
-        <h3 class="musicHeader"><a href="https://www.facebook.com/stealingspitfires/">Stealing Spitfires</a></h3>
+        <h3 class="musicHeader">DJ Disco</h3>
         <span class="smallPrint">16:00 - 17:30</span>
-        <img width="100%" src="images/spitfires.jpg">
     </div>
     <div class="bandDiv">
-        <h3 class="musicHeader"><a href="https://www.facebook.com/HalfLifeCoverBand/">Half Life</a></h3>
-        <span class="smallPrint">18:00 - 19:30</span>
-        <p>Manchester based rock/punk covers band.</p>
-        <img width="100%" src="images/halflife.jpg">
+        <h3 class="musicHeader"><a href="https://twitter.com/funkeditupuk">Funked It Up</a></h3>
+        <span class="smallPrint">18:30 - 19:30</span>
+        <p>The 'Funked It Up' house band are a collective of musicians dishing up the Funk, Northern Soul, Motown and anything else they care to funk up! The band (including brass section) cover everything from Bowie to Merry Clayton, The Meters, The commodores,
+            of course Stevie Wonder, certainly Prince, Gloria jones, Al Wilson, Al Green....all the Al's, Sam and Dave, Edwin Star and the Average White Band...to name a lot but not THE lot!</p>
+        <img width="100%" src="images/bands/funked.jpg">
     </div>
     <div class="bandDiv">
         <h3 class="musicHeader"><a href="https://www.facebook.com/Sleeping-With-The-Fishes-138136866269031/">Sleeping With The Fishes</a></h3>
         <span class="smallPrint">20:00 - 21:00</span>
-        <p>A marvelously cinematic, atmospheric and energy-filled live band.</p>
-        <img width="100%" src="images/fishes.jpg">
+        <p>Sleeping with the fishes have been working hard over the past years building a powerful repertoire of live and recorded songs. They broke into the festival circuit playing at Biker bashes and are now a regular fixture at festivals like Crosby
+            in Liverpool and Wychwood in Cheltenham. This review from David Barnicle at ‘Good Vibrations magazine’ sums up what you can expect from them live.
+            <br><br> Simply put, Sleeping with the Fishes are a marvelously cinematic, atmospheric and energy-filled live band. Such was the intensity from the off, the question, ‘Will this band ever come down?’ arose during song three. It did come down,
+            eventually, however, in tempo only.. The intensity remained and for what they gave up in tempo, they more than made up for in depth, songmanship and emotion, which arguably results in a deeper impact on the listener. Sonically, its akin to
+            Progs like Floyd and Genesis, having lunch with Arcade Fire and Feeder, while Billy Idol boozes.
+        </p>
+        <img width="100%" src="images/bands/swf.jpg">
     </div>
     <div class="bandDiv">
-        <h3 class="musicHeader"><a href="https://www.jamesohara.biz/">James O'Hara</a></h3>
+        <h3 class="musicHeader"><a href="https://www.jamesohara.biz/">The James O'Hara Band</a></h3>
         <span class="smallPrint">21:30 - 23:00</span>
-        <p>Heavily influenced by the school of Chicago blues with a modern twist.</p>
-        <img width="100%" src="images/ohara.png">
+        <img width="100%" src="images/bands/jamesO.jpg">
     </div>
 </div>
