Fix good causes styling

--- a/app/views/tickets.html
+++ b/app/views/tickets.html
@@ -1,11 +1,11 @@
-<div class="col-md-6 rowPadding">
+<div class="col-md-6 rowPadding ticketRow">
     <div style="text-align: center;">
         <img id="beerImg" src="images/Beer Glass 2018.svg" />
         <h4>Normal Entry - £5 (Includes glass)</h4>
     </div>
 </div>
 
-<div class="col-md-6 rowPadding">
+<div class="col-md-6 rowPadding ticketRow">
 
     <p>For normal entry into Didsbury Beer Festival, just turn up on the day and pay at the door.</p><br>
     <span>Thursday 25th</span><span class="pull-right">7-11PM</span><br>
