--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -74,10 +74,13 @@ a:focus {
 .rowPadding {
     padding-left: 40px;
     padding-right: 40px;
-    padding-top: 15px;
     padding-bottom: 15px;
-    margin-top: 10px;
     margin-bottom: 10px;
+}
+
+.ticketRow {
+    padding-top: 15px;
+    margin-top: 10px;
 }
 
 
@@ -237,6 +240,13 @@ a:focus {
     }
 }
 
+.marketingWide {
+    margin: 0;
+    p+h4 {
+        margin-top: 0;
+    }
+}
+
 
 /* Responsive: Portrait tablets and up */
 
@@ -247,6 +257,7 @@ a:focus {
     /* Remove the padding we set earlier */
     .header,
     .marketing,
+    .marketingWide,
     .footer {
         padding-left: 0;
         padding-right: 0;
