--- a/app/views/main.html
+++ b/app/views/main.html
@@ -27,7 +27,7 @@
 </div>
 <div class="row marketing col-md-6" style="padding: 25px; text-align: center;">
     <twitter-widget>
-        <a class="twitter-timeline" data-lang="en" data-height="350" data-theme="light" href="https://twitter.com/dbf_beer"></a>
+      <a class="twitter-timeline" data-width="300" data-height="350" data-theme="dark" href="https://twitter.com/dbf_beer?ref_src=twsrc%5Etfw">Tweets by dbf_beer</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </twitter-widget>
     <h4>Press <a href="https://www.youtube.com/watch?v=BdoGr0ocBT4" class="youtubePopup"><span class="glyphicon glyphicon-play-circle"></span></a> to watch our video, or check out our social offerings</h4>
     <p style="font-size:30px">
