Add opening times to homepage and hidden card message

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -371,6 +371,10 @@ p {
     transform-origin: top;
 }
 
+.times{
+    font-size: 14pt;
+}
+
 @media (min-width: 768px) {
     .navbar .nav,
     .navbar .nav>li {
