--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,11 +1,20 @@
 <div class="row marketing col-md-6 rowCountdown" style="text-align: center;">
     <div>
-        <h3>The 11th annual Didsbury Beer Festival will take place on
-            <br>
-            <br>
-            <span style="font-weight:bold;">25th, 26th &amp; 27th October 2018</span>
-        </h3>
-        <p>Check back soon for more info!</p>
+        <h3>The 11th annual Didsbury Beer Festival</h3>  
+        <h3>25th - 27th October 2018</h3>               
+        <div class="times col-sm-4">
+                <br>
+            <span>Thursday</span><br><span>7 - 11PM</span><br>
+        </div>
+        <div class="times col-sm-4">
+                <br>
+                <span>Friday</span><br><span>6 - 11PM</span><br>
+        </div>
+        <div class="times col-sm-4">
+                <br>
+                <span>Saturday</span><br><span>12 - 11PM</span><br><br>
+        </div>
+        <span ng-hide='true'>Now accepting card payments!</span>
     </div>
     <div>
         <br>
@@ -19,7 +28,6 @@
         </p>
         <br>
     </div>
-    <br>
     <h4>Contact us</h4>
     <p>
         For all general enquiries, please email <a href="mailto:info@didsburybeerfestival.org.uk">info@didsburybeerfestival.org.uk</a>
