Change display of times on mobile devices

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,15 +2,15 @@
     <div>
         <h3>The 11th annual Didsbury Beer Festival</h3>  
         <h3>25th - 27th October 2018</h3>               
-        <div class="times col-sm-4">
+        <div class="times col-xs-4">
                 <br>
             <span>Thursday</span><br><span>7 - 11PM</span><br>
         </div>
-        <div class="times col-sm-4">
+        <div class="times col-xs-4">
                 <br>
                 <span>Friday</span><br><span>6 - 11PM</span><br>
         </div>
-        <div class="times col-sm-4">
+        <div class="times col-xs-4">
                 <br>
                 <span>Saturday</span><br><span>12 - 11PM</span><br><br>
         </div>
