add music info for thursday

--- a/app/views/music.html
+++ b/app/views/music.html
@@ -1,5 +1,21 @@
 <div class="row marketing col-md-12">
     <div style="text-align:center;">
+        <h1>Thursday</h1>
+    </div>
+    <div class="bandDiv">
+        <h3 class="musicHeader">The Tom Hingley Band</h3>
+        <span class="smallPrint">21:30 - 22:30</span>
+        <p>
+            <ol>
+                <li>The Tom Hingley Band don't play any of the songs Tom sang which are famous</li>
+                <li>The Tom Hingley band have a guest bass player called ~Phil McIntyre because Ste Pearce works nights at Morrisons and couldn't play for you tonight</li>
+                <li>The Tom Hingley band play punchy fast Rock songs with a political conscience and badly played drawn out Blues jams</li>
+                <li>The Tom Hingley Band have come for your ears , your beers and your circumspection -SURRENDER NOW</li>
+            </ol>
+        </p>
+        <img width="100%" src="images/bands/thb.jpg">
+    </div>
+    <div style="text-align:center;">
         <h1>Friday</h1>
     </div>
     <div class="bandDiv">
