Added image for silver train

--- a/app/views/music.html
+++ b/app/views/music.html
@@ -22,6 +22,7 @@
         <h3 class="musicHeader">Silver Train</h3>
         <span class="smallPrint">18:30 - 19:30</span>
         <p>Silver Train is fast moving local 4 piece covers band consisting of : A blend of folk/blues/ country/rock infused with harmonies and slick acoustic tones.</p>
+        <img width="100%" src="images/bands/silver.jpg">
     </div>
     <div class="bandDiv">
         <h3 class="musicHeader"><a href="https://www.facebook.com/HalfLifeCoverBand/">Half-Life</a></h3>
