--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,20 +1,20 @@
 <div class="row marketing col-md-6 rowCountdown" style="text-align: center;">
     <div>
-        <h3>The 11th annual Didsbury Beer Festival</h3>  
-        <h3>25th - 27th October 2018</h3>               
+        <h3>The 11th annual Didsbury Beer Festival</h3>
+        <h3>25th - 27th October 2018</h3>
         <div class="times col-xs-4">
-                <br>
+            <br>
             <span>Thursday</span><br><span>7 - 11PM</span><br>
         </div>
         <div class="times col-xs-4">
-                <br>
-                <span>Friday</span><br><span>6 - 11PM</span><br>
+            <br>
+            <span>Friday</span><br><span>6 - 11PM</span><br>
         </div>
         <div class="times col-xs-4">
-                <br>
-                <span>Saturday</span><br><span>12 - 11PM</span><br><br>
+            <br>
+            <span>Saturday</span><br><span>12 - 11PM</span><br><br>
         </div>
-        <span ng-hide='true'>Now accepting card payments!</span>
+        <span ng-hide='false'>Now accepting card payments!</span>
     </div>
     <div>
         <br>
@@ -35,7 +35,8 @@
 </div>
 <div class="row marketing col-md-6" style="padding: 25px; text-align: center;">
     <twitter-widget>
-      <a class="twitter-timeline" data-width="300" data-height="350" data-theme="light" href="https://twitter.com/dbf_beer?ref_src=twsrc%5Etfw">Tweets by dbf_beer</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <a class="twitter-timeline" data-width="300" data-height="350" data-theme="light" href="https://twitter.com/dbf_beer?ref_src=twsrc%5Etfw">Tweets by dbf_beer</a>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </twitter-widget>
     <h4>Press <a href="https://www.youtube.com/watch?v=BdoGr0ocBT4" class="youtubePopup"><span class="glyphicon glyphicon-play-circle"></span></a> to watch our video, or check out our social offerings</h4>
     <p style="font-size:30px">
