--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,8 +1,9 @@
 <div class="row marketing col-md-6 rowCountdown" style="text-align: center;">
     <div>
-        <h3>The 11th annual Didsbury Beer Festival</h3>
-        <h3>25th - 27th October 2018</h3>
-        <div class="times col-xs-4">
+        <h3>The 12th annual Didsbury Beer Festival</h3>
+        <h3>24th - 26th October 2019</h3>
+        <span>Check back soon for more info!</span>
+        <!-- <div class="times col-xs-4">
             <br>
             <span>Thursday</span><br><span>7 - 11PM</span><br>
         </div>
@@ -14,7 +15,7 @@
             <br>
             <span>Saturday</span><br><span>12 - 11PM</span><br><br>
         </div>
-        <span ng-hide='false'>Now accepting card payments!</span>
+        <span ng-hide='false'>Now accepting card payments!</span> -->
     </div>
     <div>
         <br>
@@ -26,6 +27,7 @@
             <br> Manchester
             <br> M20 6HS
         </p>
+        <a id="lnkFind" ng-href="#!/find">Find Us</a>
         <br>
     </div>
     <h4>Contact us</h4>
