--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -21,12 +21,12 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 body {
     padding: 0;
     font-family: "Roboto Condensed", HelveticaMed, "Helvetica Neue", Helvetica;
-    background-color: #f3f3f3;
+    background-color: #fff;
     color: #5f5c5c;
 }
 
 a {
-    color: #09875d;
+    color: #ffc627;
 }
 
 a:hover,
@@ -46,7 +46,7 @@ a:focus {
 
 .musicHeader {
     margin-bottom: 0;
-    color: #09875d;
+    color: #ffc627;
 }
 
 .bandDiv {
@@ -58,7 +58,7 @@ a:focus {
 .dropdown-menu>.active>a,
 .dropdown-menu>.active>a:focus,
 .dropdown-menu>.active>a:hover {
-    background-color: #09875d;
+    background-color: #ffc627;
 }
 
 
@@ -88,7 +88,7 @@ a:focus {
 
 .header {
     border-bottom: 1px solid #e5e5e5;
-    background-color: #09875d;
+    background-color: #ffc627;
     /* Make the masthead heading the same height as the navigation */
     h3 {
         margin-top: 0;
@@ -103,7 +103,7 @@ a:focus {
     width: 100%;
     top: 0;
     left: 0;
-    background-color: #09875d;
+    background-color: #ffc627;
     z-index: 10000;
     transition: all 0.3s ease-in-out;
 }
@@ -158,7 +158,7 @@ a:focus {
 .image {
     width: 72%;
     height: auto;
-    max-height: 200px;
+    max-height: 180px;
     padding-top: 4%;
     margin: auto;
 }
@@ -331,7 +331,7 @@ p {
 
 .listName {
     font-size: 20px;
-    color: #09875d;
+    color: #ffc627;
 }
 
 .listAbv {
@@ -371,7 +371,7 @@ p {
     transform-origin: top;
 }
 
-.times{
+.times {
     font-size: 14pt;
 }
 
@@ -436,6 +436,6 @@ p {
     .navbar-default .navbar-nav .open .dropdown-menu>.active>a,
     .navbar-default .navbar-nav .open .dropdown-menu>.active>a:hover,
     .navbar-default .navbar-nav .open .dropdown-menu>.active>a:focus {
-        color: #09875d;
+        color: #ffc627;
     }
 }
