--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,7 @@
 <div class="row marketing col-md-6 rowCountdown" style="text-align: center;">
     <div>
         <h3>The 12th annual Didsbury Beer Festival</h3>
-        <h3>24th - 26th October 2019</h3>
+        <h3>31st Oct - 2nd Nov 2019</h3>
         <span>Check back soon for more info!</span>
         <!-- <div class="times col-xs-4">
             <br>
