--- a/app/views/music.html
+++ b/app/views/music.html
@@ -1,81 +1,87 @@
 <div class="row marketing col-md-12">
-    <div style="text-align:center;">
+    <div style="text-align:center; color: #131f6b;">
         <h1>Thursday</h1>
     </div>
-    <div class="bandDiv">
+    <!-- <div class="bandDiv">
         <h3 class="musicHeader">The Tom Hingley Band</h3>
-        <span class="smallPrint">21:30 - 22:30</span>
-        <p>
-            <ol>
-                <li>The Tom Hingley Band don't play any of the songs Tom sang which are famous</li>
-                <li>The Tom Hingley band have a guest bass player called ~Phil McIntyre because Ste Pearce works nights at Morrisons and couldn't play for you tonight</li>
-                <li>The Tom Hingley band play punchy fast Rock songs with a political conscience and badly played drawn out Blues jams</li>
-                <li>The Tom Hingley Band have come for your ears , your beers and your circumspection -SURRENDER NOW</li>
-            </ol>
-        </p>
+        <span class="smallPrint">20:30 - 21:30</span>
+        <p>Blues, grunge and rock</p>
         <img width="100%" src="images/bands/thb.jpg">
+    </div> -->
+    <div class="bandDiv">
+        <h3 class="musicHeader">Paddle Faster</h3>
+        <span class="smallPrint">22:00 - 23:00</span>
+        <p>An acoustic music group covering bluegrass, irish and country genres </p>
+        <!-- <img width="100%" src="images/bands/paddleFaster.jpg"> -->
+        <p style="font-size:30px">
+            <a href="https://twitter.com/TilterWheel"><i id="jv-twitter_alt" class="jv-twitter_alt"></i></a>
+            <a href="https://www.facebook.com/pg/Ólta-603176353193572/about/?ref=page_internal"><i id="jv-facebook_alt"
+                    class="jv-facebook_alt"></i></a>
+        </p>
     </div>
-    <div style="text-align:center;">
+    <div style="text-align:center; color: #131f6b;">
         <h1>Friday</h1>
     </div>
     <div class="bandDiv">
-        <h3 class="musicHeader">Silver Train</h3>
-        <span class="smallPrint">18:30 - 19:30</span>
-        <p>Silver Train is fast moving local 4 piece covers band consisting of : A blend of folk/blues/ country/rock infused with harmonies and slick acoustic tones.</p>
-        <img width="100%" src="images/bands/silver.jpg">
+        <h3 class="musicHeader">Jeremy Sassoon</h3>
+        <span class="smallPrint">19:00 - 20:00</span>
+        <p>Jazz & blues singer/pianist</p>
+        <p style="font-size:30px">
+            <a href="https://twitter.com/JeremySassoon"><i id="jv-twitter_alt" class="jv-twitter_alt"></i></a>
+            <a href="https://www.facebook.com/pg/jeremysassoon/about/?ref=page_internal"><i id="jv-facebook_alt"
+                    class="jv-facebook_alt"></i></a>
+        </p>
     </div>
     <div class="bandDiv">
-        <h3 class="musicHeader"><a href="https://www.facebook.com/HalfLifeCoverBand/">Half-Life</a></h3>
-        <span class="smallPrint">20:00 - 21:00</span>
-        <p>With members pulled from the four corners of Manchester….as long as the corners include Wilmslow and Biddulph (!).....Half-Life are a four strong Rock/Metal/Punk covers band guaranteed to get you singing and dancing (or trying to coordinate nodding
-            your head and tapping your foot while holding a pint!) along with well-known tracks from a wide range of artists from late 60s Classic Rock to a bucket-load of more modern Noughties floor fillers. Between us, we’ve played across the UK and
-            internationally, from Christenings (really!) to large festivals and are always ready to set up and rock any occasion large or small. With an ever expanding set list which currently includes tracks from artists such as Steppenwolf, Iron Maiden,
-            Green Day, Red Hot Chilli Peppers, The Cult, Guns ‘n’ Roses, Queen and Bon Jovi, to pick just a few, book us and you’re guaranteed to hear plenty of songs which you’ll just have to stop what you’re doing and sing along to!</p>
-        <img width="100%" src="images/bands/halflife2018.jpg">
+        <h3 class="musicHeader">Funked It Up</h3>
+        <span class="smallPrint">20:30 - 21:30</span>
+        <p>‘Funked It Up' are a collective of pro musicians from Greater Manchester who deliver Funk, Northern Soul, Motown and other genres...that we've funked up!</p>
+        <p style="font-size:30px">
+            <a href="https://twitter.com/funkeditupuk "><i id="jv-twitter_alt" class="jv-twitter_alt"></i></a>
+            <a href="https://www.facebook.com/pg/funkeditupuk/about/?ref=page_internal"><i id="jv-facebook_alt"
+                    class="jv-facebook_alt"></i></a>
+        </p>
     </div>
     <div class="bandDiv">
-        <h3 class="musicHeader">Paddle Faster</h3>
-        <span class="smallPrint">21:30 - 23:00</span>
-        <p>Having successfully encouraged you to get even more drunk on the various luscious festival beers of yesteryear, Paddle Faster are back with this super-reinforced, max-strength lineup to further entertain you, and again keep you good company whilst
-            the beer flows! Paul Higham, Mat Walklate, India Shan Merrett, and Jonny Hulme promise to smash you round the lug 'oles by way of powerful guitar, fiddle, banjo, harmonica, flute and vocals, playing an upbeat mix of Celtic trad., Bluegrass,
-            Blues, Americana, all topped with a healthy dash of the contemporary. These musical veterans have played together in a myriad of musical collaborations over the years, and with each originally emerging from distinctly different musical backgrounds,
-            they combine to create a seriously hard-hitting sound and potent blend of unique acoustic styles. Get yer pints in early for this one..</p>
-        <img width="100%" src="images/bands/paddleFaster.jpg">
+        <h3 class="musicHeader">James O'Hara Band</h3>
+        <span class="smallPrint">22:00 - 23:00</span>
+        <p>Chicago blues to get you off your seat</p>
+        <p style="font-size:30px">
+            <a href="https://twitter.com/jamesoharaband"><i id="jv-twitter_alt" class="jv-twitter_alt"></i></a>
+            <a href="https://www.facebook.com/pg/JamesOHaraBlues/about/?ref=page_internal"><i id="jv-facebook_alt"
+                    class="jv-facebook_alt"></i></a>
+        </p>
     </div>
-    <div style="text-align:center;">
+    <div style="text-align:center; color: #131f6b;">
         <h1>Saturday</h1>
     </div>
     <div class="bandDiv">
-        <h3 class="musicHeader"><a href="https://www.facebook.com/SwinginAffair/">Swingin' Affair</a></h3>
+        <h3 class="musicHeader">Swingin' Affair</h3>
         <span class="smallPrint">13:00 - 15:00</span>
-        <p>Big Band/Easy listening.</p>
-        <img width="100%" src="images/bands/sa.jpg">
-    </div>
-    <div class="bandDiv">
-        <h3 class="musicHeader">DJ Disco</h3>
-        <span class="smallPrint">16:00 - 17:30</span>
-    </div>
-    <div class="bandDiv">
-        <h3 class="musicHeader"><a href="https://twitter.com/funkeditupuk">Funked It Up</a></h3>
-        <span class="smallPrint">18:30 - 19:30</span>
-        <p>The 'Funked It Up' house band are a collective of musicians dishing up the Funk, Northern Soul, Motown and anything else they care to funk up! The band (including brass section) cover everything from Bowie to Merry Clayton, The Meters, The commodores,
-            of course Stevie Wonder, certainly Prince, Gloria jones, Al Wilson, Al Green....all the Al's, Sam and Dave, Edwin Star and the Average White Band...to name a lot but not THE lot!</p>
-        <img width="100%" src="images/bands/funked.jpg">
-    </div>
-    <div class="bandDiv">
-        <h3 class="musicHeader"><a href="https://www.facebook.com/Sleeping-With-The-Fishes-138136866269031/">Sleeping With The Fishes</a></h3>
-        <span class="smallPrint">20:00 - 21:00</span>
-        <p>Sleeping with the fishes have been working hard over the past years building a powerful repertoire of live and recorded songs. They broke into the festival circuit playing at Biker bashes and are now a regular fixture at festivals like Crosby
-            in Liverpool and Wychwood in Cheltenham. This review from David Barnicle at ‘Good Vibrations magazine’ sums up what you can expect from them live.
-            <br><br> Simply put, Sleeping with the Fishes are a marvelously cinematic, atmospheric and energy-filled live band. Such was the intensity from the off, the question, ‘Will this band ever come down?’ arose during song three. It did come down,
-            eventually, however, in tempo only.. The intensity remained and for what they gave up in tempo, they more than made up for in depth, songmanship and emotion, which arguably results in a deeper impact on the listener. Sonically, its akin to
-            Progs like Floyd and Genesis, having lunch with Arcade Fire and Feeder, while Billy Idol boozes.
+        <p>Swingin' affair is a Manchester based 25 piece big band</p>
+        <p style="font-size:30px">
+            <a href="https://twitter.com/SwinginAffair"><i id="jv-twitter_alt" class="jv-twitter_alt"></i></a>
+            <a href="https://www.facebook.com/pg/SwinginAffair/about/?ref=page_internal"><i id="jv-facebook_alt"
+                    class="jv-facebook_alt"></i></a>
         </p>
-        <img width="100%" src="images/bands/swf.jpg">
     </div>
     <div class="bandDiv">
-        <h3 class="musicHeader"><a href="https://www.jamesohara.biz/">The James O'Hara Band</a></h3>
-        <span class="smallPrint">21:30 - 23:00</span>
-        <img width="100%" src="images/bands/jamesO.jpg">
+        <h3 class="musicHeader">Half Life</h3>
+        <span class="smallPrint">20:00 - 21:00</span>
+        <p>Half-Life are a four strong Rock/Metal/Punk covers band guaranteed to get you singing and dancing (or trying to coordinate nodding your head and tapping your foot while holding a pint!) along with well-known tracks from a wide range of artists from late 60s Classic Rock to a bucket-load of more modern Noughties floor fillers.</p>
+        <p style="font-size:30px">
+            <a href="https://www.facebook.com/pg/HalfLifeCoverBand/about/?ref=page_internal"><i id="jv-facebook_alt"
+                    class="jv-facebook_alt"></i></a>
+        </p>
+    </div>
+    <div class="bandDiv">
+        <h3 class="musicHeader">Sleeping with the Fishes</h3>
+        <span class="smallPrint">22:30 - 23:00</span>
+        <p>A marvelously cinematic, atmospheric anenergy-filled live band.</p>
+        <p style="font-size:30px">
+            <a href="https://twitter.com/FishesSleeping"><i id="jv-twitter_alt" class="jv-twitter_alt"></i></a>
+            <a href="https://www.facebook.com/pg/Sleeping-With-The-Fishes-138136866269031/about/?ref=page_internal"><i id="jv-facebook_alt"
+                    class="jv-facebook_alt"></i></a>
+        </p>
     </div>
 </div>
