Fix logo in scrolling nav bar

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -110,8 +110,9 @@ a:focus {
 #navLogo {
     height: 50px;
     float: left;
-    padding-left: 2px;
+    padding-left: 20px;
     padding-bottom: 4px;
+    padding-top: 4px;
 }
 
 .navbar,
