Update band description

--- a/app/views/music.html
+++ b/app/views/music.html
@@ -68,7 +68,8 @@
     <div class="bandDiv">
         <h3 class="musicHeader">Half Life</h3>
         <span class="smallPrint">20:00 - 21:00</span>
-        <p>Half-Life are a four strong Rock/Metal/Punk covers band guaranteed to get you singing and dancing (or trying to coordinate nodding your head and tapping your foot while holding a pint!) along with well-known tracks from a wide range of artists from late 60s Classic Rock to a bucket-load of more modern Noughties floor fillers.</p>
+        <p>Half-Life are a four strong Rock/Metal/Punk covers band guaranteed to get you singing and dancing (or trying to coordinate nodding your head and tapping your foot while holding a pint!) along with well-known tracks from a wide range of artists
+            from late 60s Classic Rock to a bucket-load of more modern Noughties floor fillers.</p>
         <p style="font-size:30px">
             <a href="https://www.facebook.com/pg/HalfLifeCoverBand/about/?ref=page_internal"><i id="jv-facebook_alt"
                     class="jv-facebook_alt"></i></a>
@@ -77,7 +78,7 @@
     <div class="bandDiv">
         <h3 class="musicHeader">Sleeping with the Fishes</h3>
         <span class="smallPrint">22:30 - 23:00</span>
-        <p>A marvelously cinematic, atmospheric anenergy-filled live band.</p>
+        <p>A marvelously cinematic, atmospheric and energy-filled live band.</p>
         <p style="font-size:30px">
             <a href="https://twitter.com/FishesSleeping"><i id="jv-twitter_alt" class="jv-twitter_alt"></i></a>
             <a href="https://www.facebook.com/pg/Sleeping-With-The-Fishes-138136866269031/about/?ref=page_internal"><i id="jv-facebook_alt"
