Add craft beers and update music page

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -324,14 +324,18 @@ p {
 }
 
 .listBrewer {
-    color: #656464;
+    color: #131f6b;
     font-weight: bold;
     font-size: 14px;
 }
 
 .listName {
     font-size: 20px;
-    color: #ffc627;
+    color: #656464;
+}
+
+.listSite {
+    color: #656464;
 }
 
 .listAbv {
