--- a/app/views/music.html
+++ b/app/views/music.html
@@ -2,12 +2,27 @@
     <div style="text-align:center; color: #131f6b;">
         <h1>Thursday</h1>
     </div>
-    <!-- <div class="bandDiv">
-        <h3 class="musicHeader">The Tom Hingley Band</h3>
-        <span class="smallPrint">20:30 - 21:30</span>
+    <div class="bandDiv">
+        <h3 class="musicHeader">Singing for the Brain</h3>
+        <span class="smallPrint">19:30 - 20:15</span>
         <p>Blues, grunge and rock</p>
-        <img width="100%" src="images/bands/thb.jpg">
-    </div> -->
+        <p style="font-size:30px">
+            <a href="https://www.alzheimers.org.uk/get-support/your-support-services/singing-for-the-brain"><span>Website</span></a>
+            <a href="https://twitter.com/AlzSocNWEngland"><i id="jv-twitter_alt" class="jv-twitter_alt"></i></a>
+            <a href="http://facebook.com/AlzheimersSocietyNorthWest"><i id="jv-facebook_alt"
+                    class="jv-facebook_alt"></i></a>
+        </p>
+    </div>
+    <div class="bandDiv">
+        <h3 class="musicHeader">The Tom Hingley Band</h3>
+        <span class="smallPrint">21:00 - 21:45</span>
+        <p>Blues, grunge and rock</p>
+        <p style="font-size:30px">
+            <a href="https://twitter.com/tomhingleymusic"><i id="jv-twitter_alt" class="jv-twitter_alt"></i></a>
+        <a href="https://www.facebook.com/TomHingleyMusic/"><i id="jv-facebook_alt"
+            class="jv-facebook_alt"></i></a>
+        </p>
+    </div>
     <div class="bandDiv">
         <h3 class="musicHeader">Paddle Faster</h3>
         <span class="smallPrint">22:00 - 23:00</span>
