Fix craft list styling

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,8 +2,7 @@
     <div>
         <h3>The 12th annual Didsbury Beer Festival</h3>
         <h3>31st Oct - 2nd Nov 2019</h3>
-        <span>Check back soon for more info!</span>
-        <!-- <div class="times col-xs-4">
+        <div class="times col-xs-4">
             <br>
             <span>Thursday</span><br><span>7 - 11PM</span><br>
         </div>
@@ -15,7 +14,7 @@
             <br>
             <span>Saturday</span><br><span>12 - 11PM</span><br><br>
         </div>
-        <span ng-hide='false'>Now accepting card payments!</span> -->
+        <span ng-hide='false'>Now accepting card payments!</span>
     </div>
     <div>
         <br>
