add singing for the brain description

--- a/app/views/music.html
+++ b/app/views/music.html
@@ -5,7 +5,7 @@
     <div class="bandDiv">
         <h3 class="musicHeader">Singing for the Brain</h3>
         <span class="smallPrint">19:30 - 20:15</span>
-        <p>Blues, grunge and rock</p>
+        <p>It is recognised that singing can improve your brain activity, wellbeing and mood.   The Alzheimer’s Society Singing for the Brain sessions use singing to bring people with dementia together in a friendly and stimulating activity.  This local group invites you to join them in singing a variety of familiar songs.</p>
         <p style="font-size:30px">
             <a href="https://www.alzheimers.org.uk/get-support/your-support-services/singing-for-the-brain"><span>Website</span></a>
             <a href="https://twitter.com/AlzSocNWEngland"><i id="jv-twitter_alt" class="jv-twitter_alt"></i></a>
