Change email address and format sponsor js

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -31,7 +31,7 @@
     </div>
     <h4>Contact us</h4>
     <p>
-        For all general enquiries, please email <a href="mailto:info@didsburybeerfestival.org.uk">info@didsburybeerfestival.org.uk</a>
+        For all general enquiries, please email <a href="mailto:emaildbf@gmail.com">emaildbf@gmail.com</a>
     </p>
 </div>
 <div class="row marketing col-md-6" style="padding: 25px; text-align: center;">
