--- a/app/views/privacy.html
+++ b/app/views/privacy.html
@@ -7,7 +7,7 @@
     <h2>Sharing your information</h2>
     <p>We don’t share any personal information with other organisations or persons not involved with DBF.</p>
     <h2>Your rights</h2>
-    <p>You have legal rights to control what we do with your information. For example, you can ask for a copy of the information we hold, correct it and update it and ask us to delete it. Please contact info@didsburybeerfestival.org.uk with any requests. If you’re not happy the way we deal with your request you can complain to us at the same email address or contact the Information Commissioner’s Office, https://ico.org.uk/global/contact-us/.</p>
+    <p>You have legal rights to control what we do with your information. For example, you can ask for a copy of the information we hold, correct it and update it and ask us to delete it. Please contact emaildbf@gmail.com with any requests. If you’re not happy the way we deal with your request you can complain to us at the same email address or contact the Information Commissioner’s Office, https://ico.org.uk/global/contact-us/.</p>
     <h2>How we use your information</h2>
     <p>We only use your information to contact you about future volunteering and sponsorship and your next of kin’s information for emergencies. We don’t use your personal information for any other marketing.</p>
     <h2>How long we keep your information</h2>
