Update card description, remove G+ and blogger

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,7 +14,11 @@
             <br>
             <span>Saturday</span><br><span>12 - 11PM</span><br><br>
         </div>
-        <span ng-hide='false'>Now accepting card payments!</span>
+        <span ng-hide='false'>
+            NO ADVANCE TICKETS ARE REQUIRED, £5 CASH OR CARD PAYMENT ON DOOR FOR EACH SESSION. 
+            <br>
+            However, there are a few "friends" tickets, which cost £10 cash  and entitle the holder to get into all three sessions. Friends tickets can be bought from MJ Leeming Opticians, School Lane and Reasons to be Cheerful, Fog Lane.
+        </span>
     </div>
     <div>
         <br>
