Add ve and gf tags to some beers, add blurb to cider and craft page

--- a/app/views/cider.html
+++ b/app/views/cider.html
@@ -33,4 +33,8 @@
         </p>
         <br>
     </div>
+    <br><br>
+    <span>
+            All traditionally made ciders and perries are naturally gluten free (gf). Almost all of them don’t contain other allergens and are either vegan (ve) or vegetarian (v). We cannot be certain that all the ciders and perries we are selling are vegetarian, vegan and/or contain other allergens. Whilst we have tried to establish the provenance of our ciders and perries, you must not rely on our labelling of drinks, or any advice from volunteers but contact the brewer directly to confirm whether your preferred cider or perry is indeed vegetarian, vegan and/ or contains other allergens.
+    </span>
 </div>
