--- a/app/views/craft.html
+++ b/app/views/craft.html
@@ -34,5 +34,11 @@
         <br>
     </div>
     <br><br>
-    <span>We plan to serve all of these beers/ciders/perries at the festival at some point. Some beers will run out quicker than others. Sometimes our suppliers provide alternatives to the beers we asked for. <br>We apologise in advance if we don’t have a specific beer, cider or perry you want on the day(s) that you attend.</span>
+    <span>
+            Many of the beers and lagers we are selling naturally contain gluten, but some are gluten-free (gf). Some beers contain other allergens too. Equally, many beers and lagers are not vegetarian (v) or vegan (ve). Whilst we have tried to establish the provenance of the lager and beer we are selling, you must not rely on our labelling of drinks or any advice from volunteers but contact the brewer directly to confirm whether your preferred beer or lager is indeed gluten-free, vegetarian, vegan and/ or contains other allergens.
+    </span>
+    <br><br>
+    <span>
+        We plan to serve all of these beers/ciders/perries at the festival at some point. Some beers will run out quicker than others. Sometimes our suppliers provide alternatives to the beers we asked for. <br>We apologise in advance if we don’t have a specific beer, cider or perry you want on the day(s) that you attend.
+    </span>
 </div>
